Add imagemagick pdf -> image conversions
